@@ -12,6 +12,11 @@ RELEASE 0.XX - XXX
 
   From Steven Knight:
 
+  - Tighten up the scons -H help output.
+
+  - When the input yacc file ends in .yy and the -d flag is specified,
+    recognize that a .hpp file (not a .h file) will be created.
+
 
 
 RELEASE 0.90 - Wed, 25 Jun 2003 14:24:52 -0500
